--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css_files/mystyle_Hamb_menu.css">
   <!---!Hamburguer menu>--->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!---<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">--->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css_files/font-awesome.min.css">
   <script>
     function myFunction() {
